src/test/ui/feature-gates/feature-gate-intrinsics.stderr
error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-intrinsics.rs:1:1
   |
LL | / extern "rust-intrinsic" {
LL | |     fn bar();
LL | | }
   | |_^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-intrinsics.rs:5:1
   |
LL | extern "rust-intrinsic" fn baz() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0093]: unrecognized intrinsic function: `bar`
  --> $DIR/feature-gate-intrinsics.rs:2:5
   |
LL |     fn bar();
   |     ^^^^^^^^^ unrecognized intrinsic

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-intrinsics.rs:5:34
   |
LL | extern "rust-intrinsic" fn baz() {}
   |                                  ^^

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
=======
error: aborting due to 4 previous errors

>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
Some errors have detailed explanations: E0093, E0658.
For more information about an error, try `rustc --explain E0093`.
